tests/should_fail/unsupported/char_pattern.stderr
error: match on char is currently unsupported
 --> char_pattern.rs:4:5
  |
4 |     match x {
  |     ^^^^^^^

error: aborting due to 1 previous error

